# EiCOS

./: .gitignore  CMakeLists.txt  README.md
include/: data.hpp  ecos.hpp  eicos.hpp  printing.hpp  timing.hpp
src/: ecos.cpp  eicos.cpp  run.cpp
test/: ecos.h  ecostester.cpp  minunit.h
test/unboundedProblems/: unboundedMaxSqrt.h
